--- a/css/styles.css
+++ b/css/styles.css
@@ -407,15 +407,18 @@ img {
   padding: 30px 32px;
   text-align: center;
 }
+
 .tiam {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-transform: none;
 }
+
 .container-tiam {
   background-color: var(--secondary-background-color);
 }
+
 .profession {
   margin-bottom: 16px;
   font-size: 16px;
@@ -520,8 +523,6 @@ img {
 }
 
 .geoposition .link {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -540,8 +541,7 @@ img {
 
 .join {
   margin-bottom: 20px;
-  font-family: Roboto;
-  font-style: normal;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -552,9 +552,6 @@ img {
 .card-footer {
   flex-basis: calc((50% - 45px) / 2);
 }
-/* .social-networks {
-  margin-left: 70px;
-} */
 
 .card-footer .social-icon-link {
   background-color: rgba(255, 255, 255, 0.1);
@@ -577,8 +574,6 @@ img {
 .news-title {
   margin-bottom: 20px;
 
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -598,8 +593,6 @@ img {
 
   padding-left: 16px;
 
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -618,8 +611,7 @@ img {
   margin-top: 0;
   margin-left: 12px;
   padding: 10px 28px;
-  font-family: Roboto;
-  font-style: normal;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -663,7 +655,6 @@ img {
   position: relative;
   top: 50%;
   left: 50%;
-  transform: ;
   width: 528px;
   height: 581px;
   text-align: center;
@@ -704,7 +695,14 @@ img {
 
 .modal-text {
   position: absolute;
-  top: 50%;
+  top: 40px;
+  width: 100%;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+
+  color: #212121;
 }
 
 /*------------ страница портфолио------------- */
