--- a/css/styles.css
+++ b/css/styles.css
@@ -455,13 +455,13 @@ img {
 .social-icon-link:hover,
 .social-icon-link:focus {
   background-color: var(--accent-color);
-  outline: none;
+  /* outline: none; */
 }
 
 .social-icon-link:hover .icon,
 .social-icon-link:focus .icon {
   fill: var(--main-color);
-  outline: none;
+  /* outline: none; */
 }
 
 /* ---------наши клиенты---------- */
@@ -493,7 +493,7 @@ img {
 .clients-item-link:focus {
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
-  outline: none;
+  /* outline: none; */
 }
 
 /* ---------Footer--------------*/
@@ -564,7 +564,7 @@ img {
 .social-icon-link:hover,
 .social-icon-link:focus {
   background-color: var(--accent-color);
-  outline: none;
+  /* outline: none; */
 }
 
 .card-footer-news {
@@ -657,7 +657,7 @@ img {
   left: 50%;
   width: 528px;
   height: 581px;
-  text-align: center;
+
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -687,16 +687,18 @@ img {
   border-radius: 50%;
   background-color: var(--main-color);
   cursor: pointer;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-close:hover .icon {
+.button-close:hover,
+.button-close:focus {
   fill: var(--accent-color);
 }
 
 .modal-text {
   position: absolute;
   top: 40px;
-  width: 100%;
 
   font-weight: 700;
   font-size: 20px;
@@ -706,9 +708,124 @@ img {
 }
 
 .form {
-  display: flex;
+  margin-bottom: 20px;
+  width: 448px;
+  padding-top: 75px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 .form-field {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-label {
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--main-text-color);
+}
+
+.form-input {
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field .icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  fill: var(--title-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:hover,
+.form-input:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.form-input:hover ~ .icon,
+.form-input:focus ~ .icon {
+  fill: var(--accent-color);
+}
+
+.form-textarea {
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-textarea:hover,
+.form-textarea:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.form-textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.consent {
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+
+  color: var(--main-text-color);
+}
+
+.link-contract {
+  color: var(--accent-color);
+}
+
+.form-submit {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  height: 50px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--main-color);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-submit:hover,
+.form-submit:focus {
+  color: var(--main-color);
+
+  background: var(--button-bg-color);
 }
 
 /*------------ страница портфолио------------- */
@@ -749,7 +866,7 @@ img {
   background-color: var(--accent-color);
   color: var(--main-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  outline: none;
+  /* outline: none; */
 }
 
 .list.card-set {
@@ -769,6 +886,7 @@ img {
 .item-card-set:hover,
 .item-card-set:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  /* outline: none; */
 }
 
 .link-thumb {
