--- a/css/styles.css
+++ b/css/styles.css
@@ -694,7 +694,7 @@ img {
 .button-close:hover,
 .button-close:focus {
   fill: var(--accent-color);
-  outline: none;
+  /* outline: none; */
 }
 
 .modal-text {
@@ -755,7 +755,7 @@ img {
 .form-input:hover,
 .form-input:focus {
   border: 1px solid var(--accent-color);
-  outline: none;
+  /* outline: none; */
 }
 
 .form-input:hover ~ .icon,
@@ -777,7 +777,7 @@ img {
 .form-textarea:hover,
 .form-textarea:focus {
   border: 1px solid var(--accent-color);
-  outline: none;
+  /* outline: none; */
 }
 
 .form-textarea::placeholder {
